[gd_scene load_steps=4 format=3 uid="uid://c7f5l8ffw3kpb"]

[ext_resource type="Script" uid="uid://bpfwbw74mktoe" path="res://actors/AI.gd" id="1_ny0yf"]
[ext_resource type="Script" uid="uid://d3bjtvyctgdfg" path="res://actors/DetectionZone.gd" id="2_3dn40"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hpcw5"]
radius = 300.0

[node name="AI" type="Node2D"]
script = ExtResource("1_ny0yf")
should_draw_path_line = true

[node name="DetectionZone" type="Area2D" parent="."]
script = ExtResource("2_3dn40")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
visible = false
shape = SubResource("CircleShape2D_hpcw5")
disabled = true
debug_color = Color(0.92549, 0, 0, 0.0196078)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectionZone"]
polygon = PackedVector2Array(0, 1, 250, -150, 250, 150)

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="PathLine" type="Line2D" parent="."]
width = 2.0
default_color = Color(0.964706, 0.443137, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_detection_zone_body_exited"]
[connection signal="timeout" from="PatrolTimer" to="." method="_on_patrol_timer_timeout"]
